# aug_2024

./: frames_2024-08-26_15.14.10.gv  frames_2024-08-26_16.19.46.gv  frames_2024-08-26_17.25.35.gv  frames_2024-08-27_09.29.28.gv  frames_2024-08-27_10.06.53.gv  frames_2024-08-27_14.47.00.gv  frames_2024-09-19_14.37.37.gv  frames_2024-09-19_15.03.53.gv  frames_2024-09-20_08.33.20.gv  frames_2024-09-20_11.01.41.gv  frames_2024-09-20_11.52.13.gv  frames_2024-09-20_12.38.39.gv  frames_2024-12-06_12.59.56.gv  frames_2024-12-20_14.58.32.gv  frames_2025-01-13_15.35.32.gv  frames_2025-01-17_16.46.33.gv  frames_2025-01-17_16.49.24.gv  frames_2025-01-17_17.06.22.gv  frames_2025-01-20_16.01.41.gv  frames_2025-01-20_16.30.28.gv  frames_2025-01-20_18.06.53.gv  frames_2025-02-18_10.54.42.gv  frames_2025-02-18_11.44.28.gv  gzserver_error.txt  output.urdf  typescript1.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/BMC_2024/include/BMC_2024/: aug_2024_system.hpp  bmc_comms.hpp  visibility_control.h
install/BMC_2024/share/BMC_2024/: aug_2024_hardware.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/BMC_2024/share/BMC_2024/cmake/: BMC_2024Config-version.cmake  BMC_2024Config.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
install/BMC_2024/share/BMC_2024/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/BMC_2024/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: BMC_2024
install/BMC_2024/share/ament_index/resource_index/package_run_dependencies/: BMC_2024
install/BMC_2024/share/ament_index/resource_index/parent_prefix_path/: BMC_2024
install/aug_2024/share/ament_index/resource_index/package_run_dependencies/: aug_2024
install/aug_2024/share/ament_index/resource_index/parent_prefix_path/: aug_2024
install/aug_2024/share/aug_2024/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/aug_2024/share/aug_2024/cmake/: aug_2024Config-version.cmake  aug_2024Config.cmake
install/aug_2024/share/aug_2024/config/: amcl_config.yaml  flippo_controllers.yaml  gazebo_ros2_control_params.yaml  nav2_params.yaml
install/aug_2024/share/aug_2024/config/backup/: map1.pgm
install/aug_2024/share/aug_2024/description/config/: aug_2024_joint_names.yaml
install/aug_2024/share/aug_2024/description/meshes/: chassis_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL
install/aug_2024/share/aug_2024/description/urdf/: aug_2024 _no_caster.xacro  aug_2024-1.xacro  aug_2024-nocaster.urdf  (+6 more)
install/aug_2024/share/aug_2024/environment/: ament_prefix_path.dsv  path.dsv
install/aug_2024/share/aug_2024/launch/: aug_2024_launch.py  aug_2024_rospi_launch.py  aug_2024_sim_launch copy.py  aug_2024_sim_launch.py  aug_2024_sim_launch1.py
install/aug_2024/share/aug_2024/worlds/: gaz_goof_001  usda_rough_dim.sdf
install/gazebo_ros2_control/share/gazebo_ros2_control/: package.sh
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_position_pid  example_tricycle_drive  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: package.sh
install/my_robot_nav2/share/my_robot_nav2/: local_setup.sh  package.dsv  package.ps1  package.sh
install/my_robot_nav2/share/my_robot_nav2/config/: nav2_params.yaml
install/my_robot_nav2/share/my_robot_nav2/maps/: simple_map.pgm  simple_map.yaml
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: local_setup.sh  package.sh
install/sllidar_ros2/share/sllidar_ros2/launch/: view_sllidar_a2m12_launch.py
log/: latest_build
src/BMC_2024/: CMakeLists.txt
src/BMC_2024/include/BMC_2024/: aug_2024_system.hpp  bmc_comms.hpp  visibility_control.h
src/BMC_2024/src/: aug_2024_system.cpp  bmc_comms.cpp
src/aug_2024/: CMakeLists.txt  package.xml  setup.py
src/aug_2024/config/: ekf.yaml  flippo_controllers.yaml  gazebo_ros2_control_params.yaml  map1.pgm  map1.yaml  nav2_params.yaml  rviz_config.rviz  twist_mux.yaml
src/aug_2024/description/config/: aug_2024_joint_names.yaml  twist_mux.yaml
src/aug_2024/description/urdf/: aug_2024-nocaster.urdf  aug_2024.xacro  aug_2024_old.xacro  aug_2024caster.xacro
src/aug_2024/install/: local_setup.sh  setup.sh  setup.zsh
src/aug_2024/install/aug_2024/lib/aug_2024/: waypoint_navigator.py
src/aug_2024/install/aug_2024/share/aug_2024/: package.bash  package.sh  package.xml
src/aug_2024/install/aug_2024/share/aug_2024/config/: flippo_controllers.yaml  gazebo_ros2_control_params.yaml  map1.yaml  nav2_params.yaml
src/aug_2024/install/aug_2024/share/aug_2024/description/meshes/: front_left_wheel_link.STL  front_right_wheel_link.STL
src/aug_2024/install/aug_2024/share/aug_2024/description/urdf/: aug_2024-nocaster.urdf  aug_2024_old.xacro
src/aug_2024/install/aug_2024/share/aug_2024/launch/: aug_2024_sim_launch.py
src/aug_2024/install/aug_2024/share/aug_2024/worlds/: usda_rough_dim.sdf
src/aug_2024/install/aug_2024/share/aug_2024/worlds/usda_build_full/: model.config
src/aug_2024/launch/: aug_2024_launch.py  aug_2024_rospi_launch.py  aug_2024_sim_launch copy.py  aug_2024_sim_launch.py
src/aug_2024/launch/archive/: ros2_control_debug.launch.py  sllidar_a2m12_launch .py
src/aug_2024/log/: latest_build
src/aug_2024/src/: goal_replenisher.py  skunk_aug.cpp  waypoint_navigator copy.py  waypoint_navigator.py
src/aug_2024/worlds/usda_build_full/: model.sdf
src/my_robot_nav2/: CMakeLists.txt
src/my_robot_nav2/config/: slam_toolbox_params.yaml
src/my_robot_nav2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/my_robot_nav2/launch/: slam_toolbox.launch.py
src/my_robot_nav2/log/: latest_build  latest_list
(+8 files in other folders)
